--- a/week-5/crud-wonder/package.json
+++ b/week-5/crud-wonder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "straightforward-word-counting",
+  "name": "crud-wonder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.8",
+    "jquery": "^3.7.1"
   }
 }
